--- a/nodes/DWH-V_AGG_SALES_MTH_OPS.yml
+++ b/nodes/DWH-V_AGG_SALES_MTH_OPS.yml
@@ -17,48 +17,6 @@ steps:
         appliedNodeTests: []
         columns:
           - columnReference:
-              columnCounter: 20165
-              stepCounter: "1713"
-            dataType: NUMBER
-            description: ""
-            hashColumns: []
-            hashDetails: null
-            name: DIM_ORDERS_KEY
-            nullable: true
-            sourceColumnReferences:
-              - columnReferences:
-                  - columnCounter: 20106
-                    stepCounter: "1710"
-                transform: ""
-          - columnReference:
-              columnCounter: 20166
-              stepCounter: "1713"
-            dataType: NUMBER
-            description: ""
-            hashColumns: []
-            hashDetails: null
-            name: DIM_CUSTOMER_KEY
-            nullable: true
-            sourceColumnReferences:
-              - columnReferences:
-                  - columnCounter: 20108
-                    stepCounter: "1710"
-                transform: ""
-          - columnReference:
-              columnCounter: 20167
-              stepCounter: "1713"
-            dataType: NUMBER
-            description: ""
-            hashColumns: []
-            hashDetails: null
-            name: DIM_SUPPLIER_KEY
-            nullable: true
-            sourceColumnReferences:
-              - columnReferences:
-                  - columnCounter: 20109
-                    stepCounter: "1710"
-                transform: ""
-          - columnReference:
               columnCounter: 20168
               stepCounter: "1713"
             dataType: CHAR(6)
@@ -73,129 +31,17 @@ steps:
                     stepCounter: "1710"
                 transform: ""
           - columnReference:
-              columnCounter: 20169
-              stepCounter: "1713"
-            dataType: NUMBER(12,2)
-            description: ""
-            hashColumns: []
-            hashDetails: null
-            name: L_QUANTITY
-            nullable: false
-            sourceColumnReferences:
-              - columnReferences:
-                  - columnCounter: 20112
-                    stepCounter: "1710"
-                transform: ""
-          - columnReference:
-              columnCounter: 20170
-              stepCounter: "1713"
-            dataType: NUMBER(12,2)
-            description: ""
-            hashColumns: []
-            hashDetails: null
-            name: L_EXTENDEDPRICE
-            nullable: false
-            sourceColumnReferences:
-              - columnReferences:
-                  - columnCounter: 20113
-                    stepCounter: "1710"
-                transform: ""
-          - columnReference:
-              columnCounter: 20171
-              stepCounter: "1713"
-            dataType: NUMBER(12,2)
-            description: ""
-            hashColumns: []
-            hashDetails: null
-            name: L_DISCOUNT
-            nullable: false
-            sourceColumnReferences:
-              - columnReferences:
-                  - columnCounter: 20114
-                    stepCounter: "1710"
-                transform: ""
-          - columnReference:
-              columnCounter: 20172
-              stepCounter: "1713"
-            dataType: NUMBER(12,2)
-            description: ""
-            hashColumns: []
-            hashDetails: null
-            name: L_TAX
-            nullable: false
-            sourceColumnReferences:
-              - columnReferences:
-                  - columnCounter: 20115
-                    stepCounter: "1710"
-                transform: ""
-          - columnReference:
-              columnCounter: 20173
-              stepCounter: "1713"
-            dataType: TIMESTAMP
-            description: ""
-            hashColumns: []
-            hashDetails: null
-            name: SYSTEM_CREATE_DATE
-            nullable: true
-            sourceColumnReferences:
-              - columnReferences:
-                  - columnCounter: 20133
-                    stepCounter: "1710"
-                transform: ""
-          - columnReference:
-              columnCounter: 20174
-              stepCounter: "1713"
-            dataType: TIMESTAMP
-            description: ""
-            hashColumns: []
-            hashDetails: null
-            name: SYSTEM_UPDATE_DATE
-            nullable: true
-            sourceColumnReferences:
-              - columnReferences:
-                  - columnCounter: 20134
-                    stepCounter: "1710"
-                transform: ""
-          - columnReference:
-              columnCounter: 20175
-              stepCounter: "1713"
-            dataType: VARCHAR(25)
-            description: ""
-            hashColumns: []
-            hashDetails: null
-            name: C_NAME
-            nullable: false
-            sourceColumnReferences:
-              - columnReferences:
-                  - columnCounter: 19195
-                    stepCounter: "1659"
-                transform: ""
-          - columnReference:
               columnCounter: 20176
               stepCounter: "1713"
             dataType: VARCHAR(25)
             description: ""
             hashColumns: []
             hashDetails: null
-            name: N_NAME
+            name: NATION
             nullable: false
             sourceColumnReferences:
               - columnReferences:
                   - columnCounter: 19202
-                    stepCounter: "1659"
-                transform: ""
-          - columnReference:
-              columnCounter: 20177
-              stepCounter: "1713"
-            dataType: VARCHAR(25)
-            description: ""
-            hashColumns: []
-            hashDetails: null
-            name: R_NAME
-            nullable: false
-            sourceColumnReferences:
-              - columnReferences:
-                  - columnCounter: 19203
                     stepCounter: "1659"
                 transform: ""
           - columnReference:
@@ -213,19 +59,61 @@ steps:
                     stepCounter: "1654"
                 transform: ""
           - columnReference:
-              columnCounter: 20179
+              columnCounter: 20169
               stepCounter: "1713"
-            dataType: VARCHAR(25)
+            dataType: NUMBER(12,2)
             description: ""
             hashColumns: []
             hashDetails: null
-            name: S_NAME
+            name: L_QUANTITY
             nullable: false
             sourceColumnReferences:
               - columnReferences:
-                  - columnCounter: 19074
-                    stepCounter: "1652"
-                transform: ""
+                  - columnCounter: 20112
+                    stepCounter: "1710"
+                transform: SUM("AGG_SALES_MONTHLY"."L_QUANTITY")
+          - columnReference:
+              columnCounter: 20170
+              stepCounter: "1713"
+            dataType: NUMBER(12,2)
+            description: ""
+            hashColumns: []
+            hashDetails: null
+            name: L_EXTENDEDPRICE
+            nullable: false
+            sourceColumnReferences:
+              - columnReferences:
+                  - columnCounter: 20113
+                    stepCounter: "1710"
+                transform: SUM("AGG_SALES_MONTHLY"."L_EXTENDEDPRICE")
+          - columnReference:
+              columnCounter: 20171
+              stepCounter: "1713"
+            dataType: NUMBER(12,2)
+            description: ""
+            hashColumns: []
+            hashDetails: null
+            name: L_DISCOUNT
+            nullable: false
+            sourceColumnReferences:
+              - columnReferences:
+                  - columnCounter: 20114
+                    stepCounter: "1710"
+                transform: SUM("AGG_SALES_MONTHLY"."L_DISCOUNT")
+          - columnReference:
+              columnCounter: 20172
+              stepCounter: "1713"
+            dataType: NUMBER(12,2)
+            description: ""
+            hashColumns: []
+            hashDetails: null
+            name: L_TAX
+            nullable: false
+            sourceColumnReferences:
+              - columnReferences:
+                  - columnCounter: 20115
+                    stepCounter: "1710"
+                transform: SUM("AGG_SALES_MONTHLY"."L_TAX")
         cteString: ""
         enabledColumnTestIDs: []
         sourceMapping:
@@ -233,12 +121,9 @@ steps:
               AGG_SALES_MONTHLY: "1710"
               DIM_CUSTOMER: "1659"
               DIM_ORDERS: "1654"
-              DIM_SUPPLIER: "1652"
             customSQL:
               customSQL: ""
             dependencies:
-              - locationName: DWH
-                nodeName: DIM_SUPPLIER
               - locationName: DWH
                 nodeName: DIM_ORDERS
               - locationName: DWH
@@ -254,8 +139,7 @@ steps:
                 ON  "AGG_SALES_MONTHLY"."DIM_ORDERS_KEY" = "DIM_ORDERS"."DIM_ORDERS_KEY"
                 LEFT JOIN {{ ref('DWH', 'DIM_CUSTOMER') }} "DIM_CUSTOMER"
                 ON  "AGG_SALES_MONTHLY"."DIM_CUSTOMER_KEY" = "DIM_CUSTOMER"."DIM_CUSTOMER_KEY"
-                INNER JOIN {{ ref('DWH', 'DIM_SUPPLIER') }} "DIM_SUPPLIER"
-                ON  "AGG_SALES_MONTHLY"."DIM_SUPPLIER_KEY" = "DIM_SUPPLIER"."DIM_SUPPLIER_KEY"
+                GROUP BY 1, 2, 3
             name: V_AGG_SALES_MTH_OPS
             noLinkRefs: []
       name: V_AGG_SALES_MTH_OPS
