--- a/nodes/DWH-V_AGG_SALES_MTH_ALL.yml
+++ b/nodes/DWH-V_AGG_SALES_MTH_ALL.yml
@@ -17,48 +17,6 @@ steps:
         appliedNodeTests: []
         columns:
           - columnReference:
-              columnCounter: 20135
-              stepCounter: "1711"
-            dataType: NUMBER
-            description: ""
-            hashColumns: []
-            hashDetails: null
-            name: DIM_ORDERS_KEY
-            nullable: true
-            sourceColumnReferences:
-              - columnReferences:
-                  - columnCounter: 20106
-                    stepCounter: "1710"
-                transform: ""
-          - columnReference:
-              columnCounter: 20136
-              stepCounter: "1711"
-            dataType: NUMBER
-            description: ""
-            hashColumns: []
-            hashDetails: null
-            name: DIM_CUSTOMER_KEY
-            nullable: true
-            sourceColumnReferences:
-              - columnReferences:
-                  - columnCounter: 20108
-                    stepCounter: "1710"
-                transform: ""
-          - columnReference:
-              columnCounter: 20137
-              stepCounter: "1711"
-            dataType: NUMBER
-            description: ""
-            hashColumns: []
-            hashDetails: null
-            name: DIM_SUPPLIER_KEY
-            nullable: true
-            sourceColumnReferences:
-              - columnReferences:
-                  - columnCounter: 20109
-                    stepCounter: "1710"
-                transform: ""
-          - columnReference:
               columnCounter: 20138
               stepCounter: "1711"
             dataType: CHAR(6)
@@ -85,7 +43,7 @@ steps:
               - columnReferences:
                   - columnCounter: 20112
                     stepCounter: "1710"
-                transform: ""
+                transform: SUM("AGG_SALES_MONTHLY"."L_QUANTITY")
           - columnReference:
               columnCounter: 20140
               stepCounter: "1711"
@@ -99,7 +57,7 @@ steps:
               - columnReferences:
                   - columnCounter: 20113
                     stepCounter: "1710"
-                transform: ""
+                transform: SUM("AGG_SALES_MONTHLY"."L_EXTENDEDPRICE")
           - columnReference:
               columnCounter: 20141
               stepCounter: "1711"
@@ -113,7 +71,7 @@ steps:
               - columnReferences:
                   - columnCounter: 20114
                     stepCounter: "1710"
-                transform: ""
+                transform: SUM("AGG_SALES_MONTHLY"."L_DISCOUNT")
           - columnReference:
               columnCounter: 20142
               stepCounter: "1711"
@@ -127,122 +85,15 @@ steps:
               - columnReferences:
                   - columnCounter: 20115
                     stepCounter: "1710"
-                transform: ""
-          - columnReference:
-              columnCounter: 20143
-              stepCounter: "1711"
-            dataType: TIMESTAMP
-            description: ""
-            hashColumns: []
-            hashDetails: null
-            name: SYSTEM_CREATE_DATE
-            nullable: true
-            sourceColumnReferences:
-              - columnReferences:
-                  - columnCounter: 20133
-                    stepCounter: "1710"
-                transform: ""
-          - columnReference:
-              columnCounter: 20144
-              stepCounter: "1711"
-            dataType: TIMESTAMP
-            description: ""
-            hashColumns: []
-            hashDetails: null
-            name: SYSTEM_UPDATE_DATE
-            nullable: true
-            sourceColumnReferences:
-              - columnReferences:
-                  - columnCounter: 20134
-                    stepCounter: "1710"
-                transform: ""
-          - columnReference:
-              columnCounter: 20145
-              stepCounter: "1711"
-            dataType: VARCHAR(25)
-            description: ""
-            hashColumns: []
-            hashDetails: null
-            name: C_NAME
-            nullable: false
-            sourceColumnReferences:
-              - columnReferences:
-                  - columnCounter: 19195
-                    stepCounter: "1659"
-                transform: ""
-          - columnReference:
-              columnCounter: 20146
-              stepCounter: "1711"
-            dataType: VARCHAR(25)
-            description: ""
-            hashColumns: []
-            hashDetails: null
-            name: N_NAME
-            nullable: false
-            sourceColumnReferences:
-              - columnReferences:
-                  - columnCounter: 19202
-                    stepCounter: "1659"
-                transform: ""
-          - columnReference:
-              columnCounter: 20147
-              stepCounter: "1711"
-            dataType: VARCHAR(25)
-            description: ""
-            hashColumns: []
-            hashDetails: null
-            name: R_NAME
-            nullable: false
-            sourceColumnReferences:
-              - columnReferences:
-                  - columnCounter: 19203
-                    stepCounter: "1659"
-                transform: ""
-          - columnReference:
-              columnCounter: 20148
-              stepCounter: "1711"
-            dataType: VARCHAR(1)
-            description: ""
-            hashColumns: []
-            hashDetails: null
-            name: O_ORDERSTATUS
-            nullable: false
-            sourceColumnReferences:
-              - columnReferences:
-                  - columnCounter: 19115
-                    stepCounter: "1654"
-                transform: ""
-          - columnReference:
-              columnCounter: 20149
-              stepCounter: "1711"
-            dataType: VARCHAR(25)
-            description: ""
-            hashColumns: []
-            hashDetails: null
-            name: S_NAME
-            nullable: false
-            sourceColumnReferences:
-              - columnReferences:
-                  - columnCounter: 19074
-                    stepCounter: "1652"
-                transform: ""
+                transform: SUM("AGG_SALES_MONTHLY"."L_TAX")
         cteString: ""
         enabledColumnTestIDs: []
         sourceMapping:
           - aliases:
               AGG_SALES_MONTHLY: "1710"
-              DIM_CUSTOMER: "1659"
-              DIM_ORDERS: "1654"
-              DIM_SUPPLIER: "1652"
             customSQL:
               customSQL: ""
             dependencies:
-              - locationName: DWH
-                nodeName: DIM_SUPPLIER
-              - locationName: DWH
-                nodeName: DIM_ORDERS
-              - locationName: DWH
-                nodeName: DIM_CUSTOMER
               - locationName: DWH
                 nodeName: AGG_SALES_MONTHLY
             join:
@@ -250,12 +101,7 @@ steps:
 
 
                 FROM {{ ref('DWH', 'AGG_SALES_MONTHLY') }} "AGG_SALES_MONTHLY"
-                LEFT JOIN {{ ref('DWH', 'DIM_ORDERS') }} "DIM_ORDERS"
-                ON  "AGG_SALES_MONTHLY"."DIM_ORDERS_KEY" = "DIM_ORDERS"."DIM_ORDERS_KEY"
-                LEFT JOIN {{ ref('DWH', 'DIM_CUSTOMER') }} "DIM_CUSTOMER"
-                ON  "AGG_SALES_MONTHLY"."DIM_CUSTOMER_KEY" = "DIM_CUSTOMER"."DIM_CUSTOMER_KEY"
-                INNER JOIN {{ ref('DWH', 'DIM_SUPPLIER') }} "DIM_SUPPLIER"
-                ON  "AGG_SALES_MONTHLY"."DIM_SUPPLIER_KEY" = "DIM_SUPPLIER"."DIM_SUPPLIER_KEY"
+                GROUP BY 1
             name: V_AGG_SALES_MTH_ALL
             noLinkRefs: []
       name: V_AGG_SALES_MTH_ALL
