--- a/data.yml
+++ b/data.yml
@@ -1,5 +1,11 @@
 defaultStorageMapping: STAGE
 jobs:
+  Job-21:
+    id: 21
+    name: Create Stored Procedures
+    steps:
+      - "1857"
+    subgraphs: []
   Job-5:
     id: 5
     name: Supplier pipeline
