--- a/nodes/STAGE-STG_SUPPLIER_TEST.yml
+++ b/nodes/STAGE-STG_SUPPLIER_TEST.yml
@@ -199,4 +199,4 @@ steps:
       schema: ""
       sqlType: Stage
       type: sql
-    stepCounter: "STG_SUPPLIER_TEST-187"
+    stepCounter: "187"
