--- a/data.yml
+++ b/data.yml
@@ -2970,6 +2970,38 @@ stepTypes:
             {% endif %}
     name: Copy of Dimension
     version: 1
+  StepType-52:
+    id: "52"
+    isDisabled: false
+    metadata:
+      defaultStorageLocation: STAGE
+      error: null
+      nodeMetadataSpec: |+
+        capitalized: Copy of SQL
+        short: SQL
+        plural: SQLs
+        tagColor: '#2EB67D'
+
+        config:
+        - groupName: Options
+          items:
+          - displayName: SQL
+            attributeName: SQL1
+            type: textBox
+            syntax: sql
+            isRequired: true
+
+      templates:
+        create:
+          templateString: |-
+            {% if config.SQL1 %}
+            	{{ stage('SQL1') }}
+            	{{ config.SQL1 }}
+            {% endif %}
+        run:
+          templateString: ""
+    name: SQL CREATE
+    version: 1
   StepType-9:
     id: "9"
     isDisabled: false
