--- a/data.yml
+++ b/data.yml
@@ -13,32 +13,41 @@ locations:
       "3":
         database: DOUG_DB
         schema: PROD_EDW
+      "5":
+        database: DOUG_DB
+        schema: DEV_EDW_DOUG
   SOURCE:
     mappingDefinitions:
       "3":
         database: COALESCE_SAMPLE_DATABASE
         schema: TPCH_SF001
+      "5":
+        database: SNOWFLAKE_SAMPLE_DATA
+        schema: TPCH_SF1
   SOURCE1:
     mappingDefinitions:
       "3":
         database: COALESCE_SAMPLE_DATABASE
         schema: TPCH_SF001
       "5":
-        database: ""
-        schema: ""
+        database: SNOWFLAKE_SAMPLE_DATA
+        schema: TPCH_SF1
   SOURCE2:
     mappingDefinitions:
       "3":
         database: COALESCE_SAMPLE_DATABASE
         schema: TPCH_SF001
       "5":
-        database: ""
-        schema: ""
+        database: SNOWFLAKE_SAMPLE_DATA
+        schema: TPCH_SF1
   STAGE:
     mappingDefinitions:
       "3":
         database: DOUG_DB
         schema: PROD_STG
+      "5":
+        database: DOUG_DB
+        schema: DEV_STG_DOUG
 macros:
   Macro-1:
     id: "1"
