--- a/data.yml
+++ b/data.yml
@@ -98,13 +98,18 @@ stepTypes:
         short: DS
         plural: Data Stores
         tagColor: '#29B2DB'
-            
+
+        deployStrategy: advanced
+
         config:
         - groupName: Options
           items:
           
           - type: businessKeyColumns
             isRequired: true
+
+          - type: changeTrackingColumns
+            isRequired: false
 
           - type: multisourceToggle
             enableIf: "{% if node.materializationType == 'table' %} true {% else %} false {% endif %}"
@@ -168,17 +173,13 @@ stepTypes:
           attributeName: isSystemUpdateDate
       templates:
         create:
-          templateString: |2+
-
-                {{ stage('Create Data Store Table') }}
-
-                CREATE OR REPLACE TABLE {{ ref_no_link(node.location.name, node.name) }}
+          templateString: |-
+            {% if currentState == undefined  %}
+                {{ stage('Create Table') }}
+                CREATE OR REPLACE TABLE {{ ref_no_link(desiredState.node.location.name, desiredState.node.name) }}
                 (
-                    {% for col in columns %}
+                    {% for col in desiredState.columns %}
                         "{{ col.name }}" {{ col.dataType }}
-                        {% if col.isSurrogateKey %}
-            		        identity
-                        {% endif %}
                         {%- if not col.nullable %} NOT NULL
                             {%- if col.defaultValue | length > 0 %} DEFAULT {{ col.defaultValue }}{% endif %}
                         {% endif %}
@@ -186,8 +187,94 @@ stepTypes:
                         {%- if not loop.last -%}, {% endif %}
                     {% endfor %}
                 )
-                {%- if node.description | length > 0 %} COMMENT = '{{ node.description }}'{% endif %}
+                {%- if desiredState.node.description | length > 0 %} COMMENT = '{{ desiredState.node.description }}'{% endif %}
 
+            {% elif currentState != undefined and desiredState != undefined  %}
+                {% set counter = namespace(changes = 0) %}
+                {#-- Location or name changed --#}
+                {% if currentState.node.location.id != desiredState.node.location.id or currentState.node.name != desiredState.node.name %}
+                    {% set counter.changes = counter.changes + 1 %}
+                    {{ stage('Rename and/or Move Table') }}
+                    ALTER TABLE {{ ref_no_link(currentState.node.location.name, currentState.node.name) }}
+                    RENAME TO   {{ ref_no_link(desiredState.node.location.name, desiredState.node.name) }}
+                {% endif %}
+                {#-- Drop columns --#}
+                {% for curcol in currentState.columns if curcol.id not in desiredState.columns | map(attribute="id") %}
+                    {% set counter.changes = counter.changes + 1 %}
+                    {% if loop.first %}
+                        {{ stage('Drop Columns') }}
+                        ALTER TABLE {{ ref_no_link(desiredState.node.location.name, desiredState.node.name) }}
+                        DROP COLUMN
+                    {% else %}
+                        ,
+                    {% endif %}
+                    {{ curcol.name }}
+                {% endfor %}
+                {#-- Rename columns (one at a time) --#}
+                {% for curcol in currentState.columns 
+                if curcol.name != (desiredState.columns | selectattr('id', "equalto", curcol.id) | list | first).name %}
+                    {% set counter.changes = counter.changes + 1 %}
+                    {{ stage('Rename Column ' + curcol.name) }}
+                    ALTER TABLE {{ ref_no_link(desiredState.node.location.name, desiredState.node.name) }}
+                    RENAME COLUMN {{ curcol.name }}
+                    TO {{ (desiredState.columns | selectattr('id', "equalto", curcol.id) | list | first).name }}
+                {% endfor %}
+                {#-- Change data types etc --#}
+                {% for curcol in currentState.columns 
+                if curcol.dataType != (desiredState.columns | selectattr('id', "equalto", curcol.id) | list | first).dataType 
+                or curcol.nullable != (desiredState.columns | selectattr('id', "equalto", curcol.id) | list | first).nullable
+                or curcol.description != (desiredState.columns | selectattr('id', "equalto", curcol.id) | list | first).description
+                or curcol.defaultValue != (desiredState.columns | selectattr('id', "equalto", curcol.id) | list | first).defaultValue
+                %}
+                    {% set counter.changes = counter.changes + 1 %}
+                    {% if loop.first %}
+                        {{ stage('Change Column Attributes') }}
+                        ALTER TABLE {{ ref_no_link(desiredState.node.location.name, desiredState.node.name) }}
+                        MODIFY
+                    {% else %}
+                        ,
+                    {% endif %}
+                    {% set counter.colchanges = 0 %}
+                    {% if curcol.dataType != (desiredState.columns | selectattr('id', "equalto", curcol.id) | list | first).dataType %}
+                        {% if counter.colchanges > 0 %},{% endif %}
+                        COLUMN {{ curcol.name }}
+                        SET DATA TYPE {{ (desiredState.columns | selectattr('id', "equalto", curcol.id) | list | first).dataType }}
+                        {% set counter.colchanges = counter.colchanges + 1 %}
+                    {% endif %}
+                    {% if curcol.nullable != (desiredState.columns | selectattr('id', "equalto", curcol.id) | list | first).nullable %}
+                        {% if counter.colchanges > 0 %},{% endif %}
+                        COLUMN {{ curcol.name }}
+                        {% if curcol.nullable %}SET{% else %}DROP{% endif %} NOT NULL
+                        {% set counter.colchanges = counter.colchanges + 1 %}
+                    {% endif %}
+                    {% if curcol.description != (desiredState.columns | selectattr('id', "equalto", curcol.id) | list | first).description %}
+                        {% if counter.colchanges > 0 %},{% endif %}
+                        COLUMN {{ curcol.name }}
+                        COMMENT '{{ (desiredState.columns | selectattr('id', "equalto", curcol.id) | list | first).description }}'
+                        {% set counter.colchanges = counter.colchanges + 1 %}
+                    {% endif %}
+                    {% if curcol.defaultValue != (desiredState.columns | selectattr('id', "equalto", curcol.id) | list | first).defaultValue %}
+                        {% if counter.colchanges > 0 %},{% endif %}
+                        COLUMN {{ curcol.name }}
+                        {% if (desiredState.columns | selectattr('id', "equalto", curcol.id) | list | first).defaultValue == '' %}
+                            DROP DEFAULT
+                        {% else %}
+                            SET DEFAULT {{ (desiredState.columns | selectattr('id', "equalto", curcol.id) | list | first).defaultValue }}
+                        {% endif %}
+                        {% set counter.colchanges = counter.colchanges + 1 %}
+                    {% endif %}
+                {% endfor %}
+                {% if counter.changes == 0 %}
+                    {{ stage('No Changes Detected') }}
+                    SELECT 1
+                {% endif %}
+            {% else %}
+            --
+            -- not sure what it was or is, probably something went wrong
+            --
+                {{ stage('Something Might Be Wrong! Attempting Create ' + desiredState.node.materializationType[0] | upper + desiredState.node.materializationType[1:] | lower) }}
+                CREATE OR REPLACE {{ desiredState.node.materializationType | upper }} {{ ref_no_link(desiredState.node.location.name, desiredState.node.name) }}
+            {% endif %}
         run:
           templateString: |-
 
@@ -2986,7 +3073,7 @@ stepTypes:
       defaultStorageLocation: STAGE
       error: null
       nodeMetadataSpec: |-
-        capitalized: Copy of SQL
+        capitalized: CREATE SQL
         short: SQL
         plural: SQLs
         tagColor: '#2EB67D'
