--- a/nodes/DWH-DS_NATION.yml
+++ b/nodes/DWH-DS_NATION.yml
@@ -89,6 +89,20 @@ steps:
                   - columnCounter: 6348
                     stepCounter: "557"
                 transform: ""
+          - columnReference:
+              columnCounter: 25730
+              stepCounter: "1892"
+            dataType: VARCHAR(152)
+            description: ""
+            hashColumns: []
+            hashDetails: null
+            name: N_COMMENT2
+            nullable: true
+            sourceColumnReferences:
+              - columnReferences:
+                  - columnCounter: 6348
+                    stepCounter: "557"
+                transform: ""
           - acceptedValues:
               strictMatch: true
               values: []
