--- a/data.yml
+++ b/data.yml
@@ -118,7 +118,9 @@ macros:
           AND JOB_NAME = '{{node.name}}'||'_JOB'
       {%- endmacro %}
 packages: {}
-projects: {}
+projects:
+  "1":
+    name: QA_STEWARTB
 stepTypes:
   StepType-1:
     id: "1"
@@ -1556,7 +1558,9 @@ stepTypes:
               {%- if node.description | length > 0 %} COMMENT = '{{ node.description }}'{% endif %}
             ;
         run:
-          templateString: "{{ stage('Refresh External Table') }}\r\nALTER EXTERNAL TABLE {{ ref_no_link(node.location.name, node.name) }} REFRESH "
+          templateString: |-
+            {{ stage('Refresh External Table') }}
+            ALTER EXTERNAL TABLE {{ ref_no_link(node.location.name, node.name) }} REFRESH 
     name: External Table
     version: 1
   StepType-17:
